--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "supportSite":"http://learn.appdocumentation.com/plugin-tutorials/events-feed-plugin-tutorial",
   "scripts": {
     "postinstall": "./node_modules/.bin/bower install",
-    "test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS"
+    "test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS",
+    "build": "cd .. && rm -rf eventsFeedPlugin.zip && zip -r eventsFeedPlugin.zip eventsFeedPlugin/"
   },
   "license": "ISC",
   "dependencies": {
